Bug 1449774 - Improve contrast of security text color on dark themes. r=johannh
MozReview-Commit-ID: K7Ns0t5wveB

UltraBlame original commit: a69be6eee5a3964e8b2465d9003039c6208931a6

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -1658,6 +1658,30 @@ color
 058B00
 ;
 }
+:
+root
+[
+lwt
+-
+popup
+-
+brighttext
+]
+.
+identity
+-
+popup
+-
+connection
+-
+secure
+{
+color
+:
+#
+30e60b
+;
+}
 .
 identity
 -
